changed model BM25F to BM25, added eval with no query expansion

--- a/0/run_0_terrier.properties
+++ b/0/run_0_terrier.properties
@@ -306,7 +306,7 @@ expansion.terms=10
 #####################################################
 #Field based models take the frequency in each field 
 #into account. 
-trec.model=BM25F
+trec.model=BM25
 #trec.model=PL2F
 #For these models, you need a length normalisation property
 #for each field, starting at 0. Note that field names (as specified by FieldTags.process)
