--- a/0/BM25b0.75_Bo1bfree_d_3_t_10_0.res.settings
+++ b/0/BM25b0.75_Bo1bfree_d_3_t_10_0.res.settings
@@ -1,12 +1,12 @@
-# Settings of Terrier (TRECQuerying) generated for run /home/paolo/Terrier/terrier-core-4.4/var/results/BM25F_Bo1bfree_d_3_t_10_0.res
-#Thu Dec 27 17:29:35 CET 2018
+# Settings of Terrier (TRECQuerying) generated for run /home/paolo/Terrier/terrier-core-4.4/var/results/BM25b0.75_Bo1bfree_d_3_t_10_0.res
+#Sat Dec 29 17:44:48 CET 2018
 terrier.etc=/home/paolo/Terrier/terrier-core-4.4/etc
 blocks.max=100000
 trec.querying.outputformat=org.terrier.structures.outputformat.TRECDocnoOutputFormat
 querying.default.controls=
 trec.results=results
 parameter.free.expansion=true
-trec.runtag=BM25F_Bo1bfree
+trec.runtag=BM25b0.75_Bo1bfree
 trec.matching=Matching
 docs.check=20
 stopwords.encoding=UTF-8
@@ -15,10 +15,8 @@ trec.querying.outputformat.docno.meta.key=docno
 stopwords.intern.terms=false
 rocchio_beta=0.4d
 terrier.index.path=/home/paolo/Terrier/terrier-core-4.4/var/index_0/
-c.1=1.0
 trec.querying.resultscache=org.terrier.structures.cache.NullQueryResultCache
 trec.querying.dump.settings=true
-c.0=1.0
 querying.allowed.controls=scope,qe,qemodel,start,end,site,scope
 files.transforms=
 querying.preprocesses.order=
@@ -46,8 +44,6 @@ block.indexing=false
 querying.postfilters.controls=decorate\:SimpleDecorate,site\:SiteFilter,scope\:Scope
 TrecQueryTags.idtag=num
 trec.output.format.length=1000
-w.1=1.0
-w.0=1.0
 terrier.index.retrievalLoadingProfile.default=true
 trec.topics=/home/paolo/Terrier/IR_HW1/topics.351-400_trec7.txt
 max.term.length=20
@@ -68,7 +64,7 @@ TrecQueryTags.doctag=top
 terrier.index.prefix=data
 ignore.empty.documents=false
 match.empty.query=false
-trec.model=BM25F
+trec.model=BM25
 qe.feedback.selector=PseudoRelevanceFeedbackSelector
 files.default.scheme=file
 TrecQueryTags.process=title,desc
@@ -79,7 +75,7 @@ trecquery.ignore.desc.narr.name.tokens=true
 trec.encoding=UTF-8
 termpipelines=Stopwords,PorterStemmer
 # topicfile: /home/paolo/Terrier/IR_HW1/topics.351-400_trec7.txt
-# run started at: 1545927742286
-# run finished at 1545928175248
+# run started at: 1546101880010
+# run finished at 1546101888044
 # c=0.0 c_set=false
-# model=BM25F
+# model=BM25
